Docker/Scripts/Network/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 namespace: default
 annotations:
  ingressclass.kubernetes.io/is-default-class: "true"
  nginx.ingress.kubernetes.io/use-regex: "true"
  nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "1"
  nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  kubernetes.io/ingress.global-static-ip-name: "core-proxy-static-ip"
spec:
 ingressClassName: nginx
 tls:
  - hosts:
    - reactivities
    - microservices
    - recipebook
    - graphql
    - auction
    - redmango
    - grafana
    - prometheus
    - redis
    - elk
    - kafka
    - rabbit
    - vault
    secretName: my-cert
 rules:
  - host: reactivities
    http:
     paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: reactivities-front-cluster-ip-service
          port:
           number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: reactivities-api-cluster-ip-service
          port:
           number: 5001
      - path: /chat/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: reactivities-api-cluster-ip-service
          port:
           number: 5001
  - host: redmango
    http:
     paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: rm-front-cluster-ip-service
          port:
           number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: rm-api-cluster-ip-service
          port:
           number: 5026
  - host: microservices
    http:
     paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: ms-front-cluster-ip-service
          port:
           number: 80
      - path: /identity/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: ms-identity-front-cluster-ip-service
          port:
           number: 80
      - path: /identity/api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: ms-identity-api-service
          port:
           number: 5020
      - path: /api/ms-rabbit-producer/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: ms-rabbit-producer-service
          port:
           number: 5021
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: ms-main-api-service
          port:
           number: 5022
  - host: recipebook
    http:
     paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: rb-front-cluster-ip-service
          port:
           number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: rb-api-service
          port:
           number: 5030
  - host: graphql
    http:
     paths:
      - path: /monolit/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: graphql-monolit-service
          port:
           number: 3000
  - host: auction
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: auction-front-clusterip
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /reports
        backend:
          service:
            name: auction-front-reports-clusterip
            port:
              number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: auction-gateway-clusterip
          port:
           number: 80
      - path: /api/reports/?(.*)
        pathType: ImplementationSpecific
        backend:
         service:
          name: auction-gateway-clusterip
          port:
           number: 80
  - host: prometheus
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: prometheus-cluster-ip-service
            port:
              number: 9090
  - host: grafana
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: grafana-cluster-ip-service
            port:
              number: 3000
  - host: elk
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: kibana-service
            port:
              number: 5601
  - host: kafka
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: kafkaui-cluster-ip-service
            port:
              number: 8080
  - host: rabbit
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: rabbitmq-management-ip-service
            port:
              number: 15672
  - host: redis
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: redis-ip-service
            port:
              number: 8001
  - host: vault
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: vault-cluster-ip-service
            port:
              number: 8200
